# intro_cad

./: .gitignore  AULA3.dwg  Cabana_CHAMBERLAIN.dwg  README.md  RegrasDoLCAD.md  TEMPLETE_INFO01.3dm  _config.yml  execicio_casa_Y.bak  execicio_casa_Y.dwg  execicio_casa_Y_.dwg  exercício_cad_02.bak  intro_cad.cdc  pixi.toml  pyproject.toml  test.py  teste_parametrico_y.bak  teste_parametrico_y.dwg
EditaisDasAvaliacoes/: Editais_projeto_escolhido.md  Readme.md  editais.md  edital_3d.md  edital_casa_y.md
PaperSpace/: PaperSpace.md
atalhos/: cad_atalhos.md
atalhosRhino/: TEMPLETE_INFO01.3dm  acad.pgp  atalhos cad rhino.xls  atalhosCadRhino.xls  atalhosRhino.md  info1AtalhosRhino.txt
blocos/: blocos.md
casa_y_testes/: TESTE_BRISCAD.dwg  execicio_casa_Y_.bak  execicio_casa_Y_2022.1.bak  execicio_casa_Y_2022.1.dwg  execicio_casa_Y_2023.1.bak  execicio_casa_Y_2023.1.dwg  exercício_cad_02.dwg
cotas/: cotas.md
download_assets/: BLOCOS_ANNOT_D.dwg  Blocos_annot_d_2023.dwg  Blocos_annot_d_2023.dwl  Blocos_annot_d_2023.dwl2  FFR_2025.bak  FFR_2025.dwg  FFR_2025.dwt  FORMATOS_A_DINAMICOS_mm.dwg  carimbo.dwg  down.md  template_01.bak  template_01.dwl  template_01.dwl2  template_01.dwt
escalaAnotativa/: BLOCOS_ANNOT_D.bak  BLOCOS_ANNOT_D.dwg  FORMATOS A DINAMICOS mm.dwt  FORMATOS_A_DINAMICOS_mm.bak  FORMATOS_A_DINAMICOS_mm.dwg  escalaAnota.md  escalaAnotativa.cdc
exercicio_chamberlain/: Cabana_CHAMBERLAIN_paper.dwg
exercicio_coordenadas/: cartezianas_2022_1.bak  cartezianas_2022_1.dwg
exercicio_modify/: modify_commands.dwg
exercicio_plotagem/: ROSE2.DXF
(+60 files in other folders)
