[tool.poetry]
name = "intro_pyautocad"
version = "0.1.0"
description = "testing python autocad integration"
authors = ["ffribeiro\" <ffribeiro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyautocad = "^0.2.0"
openpyxl = "^3.0.9"
jupyter = "^1.0.0"
pandas = "^1.4.2"
numpy = "^1.22.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
